<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AidEye</string>
    <string name="data_text_hint_interactive">Type Here</string>
    <string name="data_text_hint_auditory">Double tap screen to speak</string>
    <string name="save_button">Save</string>
    <string name="setting_text">Setting</string>
    <string name="subscription_text">Subscription</string>
    <string name="logout_text">Logout</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="speed_text">Speed</string>
    <string name="pitc_text">Pitch</string>
    <string name="test_voice_data">Test Voice Data</string>
    <string name="test_voice_data_content">This is the test data for voice testing</string>
    <string name="test_gender_data">Select voice gender</string>
    <string name="nfc_not_supported_msg">Your device is not nfc supported</string>
    <string name="nfc_disable_msg">Nfc is disabled please turn on</string>
    <string name="welcome_msg">Kindly double tap on screen to speak, capture and store data on tag</string>
    <string name="prefix_msg_of_confirm_dialog">You said  </string>
    <string name="sufix_msg_of_confirm_dialog">, Tap  tag  to the device.  to store data. in A nfc tag</string>
    <string name="write_error">Write error</string>
    <string name="null_tag_msg">Corrupted tag</string>
    <string name="say_something_msg">Say something</string>
    <string name="speaking_after_msg">Try after speaking completed</string>
    <string name="speach_not_supported">Speech not supported</string>
    <string name="tag_data_msg">tag data: </string>
    <string name="tag_detected">Tag Detected</string>
    <string name="auditory_button_text">Auditory</string>
    <string name="interactive_button_text">Interactive</string>
    <string name="data_saved_successfully"> Data saved successfully</string>
    <string name="enable_nfc_title_text">Enable NFC</string>
    <string name="enable_nfc_description_text">Please enable NFC service in your device</string>
    <string name="translating_data">Translating data…</string>

    <string name="phone_Number">Phone Number</string>
    <string name="Password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="forgot_Password">Forgot Password ?</string>
    <string name="create_Account">Create Account</string>

    <string name="full_Name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="pin_zipcode">Pincode / Zipcode</string>
    <string name="phone_No">Phone No</string>
    <string name="reg_Password">Password</string>
    <string name="btn_Register">Register</string>

    <string name="prompt_email">Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string name="need">We need to text you the OTP to</string>
    <string name="auth">authenticate your account</string>

    <string name="phone">Enter OTP</string>
    <string name="number">+91–4445556987</string>
    <string name="ok">OK</string>

    <string-array name="listValues">
        <item>Select language </item>
        <item>English</item>
        <item>Spanish</item>
        <item>Dutch</item>
        <item>Swedish</item>
        <item>Hindi</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
        <item>Polish</item>
        <item>Greek</item>
    </string-array>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="permissiondeniedmsg">Permission denied</string>
    <string name="pleasewaitloadermsg">please wait…</string>
    <string name="msgforwrongemailpass">Email and Password required</string>
    <string name="comingsoonmsg">Coming Soon</string>
    <string name="auditorybtntext">dscgjya</string>
    <string name="internetnotavamsg">Internet not available</string>
    <string name="turnoninternetmsg">No internet connection. Turn on internet connection</string>
    <string name="otprequiremsg">OTP required</string>
    <string name="allfieldreqmsg">All the fields are required</string>
    <string name="payment_amount">Payment Amount :</string>
    <string name="status">Status :</string>
    <string name="payment_id">Payment Id :</string>
    <string name="type_here">Type here</string>
    <string name="powered_by">Powered by</string>
    <string name="gocube_technology">GoCube Technology</string>
    <string name="please_subscribe_to_plan_first">Please Subscribe to plan first</string>
    <string name="subscribe">Subscribe</string>
    <string name="verify">Verify</string>
    <string name="plan_1">Plan 1</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="book">Book</string>
    <string name="planamount">300$</string>
    <string name="full_name">Full Name</string>
    <string name="full_address">Full Address</string>
    <string name="postcode_zipcode">Postcode/zipcode</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <string name="hello_how_are_you">Hello, how are you ?</string>
    <string name="amount">Amount :</string>
    <string name="_500">$500</string>
    <string name="payment_now">Payment Now</string>
    <string name="save">Save</string>
    <string name="name_hinttext">Name</string>
    <string name="email_hinttext">Email</string>
    <string name="aliasname_hinttext">Alias Name</string>
    <string name="phoneNumber_hinttext">phoneNumber</string>
    <string name="address_hinttext">Address</string>
    <string name="zipcode_hinttext">Zip code</string>
    <string name="profile_button_text">Update</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout ?</string>

    <string name="slide_1_title">Innovative Design</string>
    <string name="slide_1_desc">AidEye App has a uniquely designed User Interface to suit the needs of our customers</string>

    <string name="slide_2_title">User Friendly</string>
    <string name="slide_2_desc">The Auditory and Interactive functionality in AidEye App enables the ease of use</string>

    <string name="slide_3_title">Transformative App</string>
    <string name="slide_3_desc">AidEye is a life-changing App that can be used by anyone especially the Blind, Elderly, Dyslexic and Autistic</string>

    <string name="slide_4_title">Dummy title 4</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="next">NEXT</string>
    <string name="nextsplash">NEXT</string>
    <string name="skipsplash">SKIP</string>
    <string name="startsplash">GOT IT</string>

    <string name="error_net_connection">Error in network connection!</string>
    <string name="activePlantoast">Plan already activated!!</string>
    <string name="dummy_text_is_text_that_is_used_in_the_publishing_industry_or_by_web_designers_to_occupy_the_space_which_will_later_be_filled_with_real_content_the_most_well_known_dummy_text_is_the_lorem_ipsum_which_is_said_to_have_originated_in_the_16th_century_lorem_ipsum_is_composed_in_a_pseudo_latin_language_which_more_or_less_corresponds_to_proper_latin">Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with \'real\' content. The most well-known dummy text is the \'Lorem Ipsum\', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to \'proper\' Latin.</string>
    <string name="verify_email_loader">Verfiying...</string>
    <string name="reset_password_loader">Reseting...</string>
    <string name="action_edit">Edit</string>
    <string name="accessstorage_toastmsg">No access Storage</string>
    <string name="profileimageuploaded">Profile Image uploaded Successfully!!</string>
    <string name="profileupdate_toastmsg">Profile Updated Successfully!!</string>
    <string name="pleasewait_text">Updating...</string>


</resources>



