<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView1"
    android:onClick="planDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#1d1d1f"
    android:layout_margin="10dp">

    <RelativeLayout
        android:id="@+id/license_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/driver_imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/moneydollar" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planamount"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="30dp" />

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/driver_imageview"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/driver_imageview"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/driver_imageview">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:maxEms="20"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry" />
        </LinearLayout>

        <Button
            android:id="@+id/button_ViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/book"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>


</android.support.v7.widget.CardView>