<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/icons8_open_envelope_40" />

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/need"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auth"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />


        <customfonts.EditText_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:background="#00000000"
            android:hint="@string/phone"
            android:id="@+id/otp"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="135dp"
            android:layout_marginRight="135dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="Verify"
            android:textAllCaps="false"
            android:onClick="verifyotp"
            android:textColor="#fff"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>
    </LinearLayout>



</RelativeLayout>